--- a/index.html
+++ b/index.html
@@ -1,25 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      background-color: #1b1b1b;
-    }
-  </style>
-  <script src="p5js/p5.min.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
-</head>
+<haed>
+    <title>Let me introduce my self</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</haed>
 
 <body>
-  <main>
-  </main>
+    <h1>안녕하세요, 코딩시간입니다.</h1>
+    <a href="./p5.html">My P5</a>
 </body>
-
 </html>
